--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -20,17 +20,17 @@ a { color: #8D0D19;}
 #main { margin: 0px; padding: 0px; height: 600px; width: 100%; background: #EEE4B9; }
 #structure { height: 600px; width: 100%; }
 #footer { height: 2em; margin: 0px; padding: 1em; text-align: center; 
-	background: #1A446C;  color: #D4E6F4; }
+	background: #1A446C;  color: #D4E6F4; z-index: 1000}
 
 /* Navigation */
-#navigation { width: 150px; padding: 1em 2em; color: #D4E6F4; background: #8D0D19; float: left;}
+#navigation { width: 150px; height: 100%; padding: 1em; color: #D4E6F4; background: #8D0D19; float: left; z-index: -1000}
 #navigation a { color: #D4E6F4; text-decoration: none; }
 ul.subjects { padding-left: 0; list-style: none; }
 ul.pages { padding-left: 2em; list-style: square; }
 .selected { font-weight: bold; }
 
 /* Page Content */
-#page { padding-left: 2em; vertical-align: top; background: #EEE4B9; float:left; }
+#page { padding-left: 2em; vertical-align: top; background: #EEE4B9; float:left;}
 #page h2 { color: #8D0D19; margin-top: 1em;}
 #page h3 { color: #8D0D19; }
 
